<resources>
    <string name="app_name">Nearby B-Card</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="discover">Discover</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="settings">Settings</string>
    <string name="NEARBY_MESSAGE_API_KEY">AIzaSyD4RuiWXWeXseSO7jcW2X3-jmgYkIXmRHw</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="share_b_card">Share\nyour\nBusiness Card</string>
    <string name="login_work_hint">Work</string>
    <string name="login_address_hint">Address</string>
    <string name="discover_nearby">Discover Nearby</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="allow_publish">Allow publish</string>
    <string name="share">Share</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_to_contacts">Add to phone contacts?</string>
    <string name="add">Add</string>
    <string name="nearby">Nearby</string>
    <string name="no_nearby">No Nearby Found!</string>
    <string name="no_saved_nearby">No Saved Nearby</string>
    <array name="switch_tabs">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>