<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    tools:context=".presentation.ui.settings.SettingsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_publish"
        android:textSize="@dimen/txt18"
        android:id="@+id/allow_label"
        android:fontFamily="@font/near_settings"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dimen5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<androidx.appcompat.widget.SwitchCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/sw_allow_publish"
    app:layout_constraintTop_toTopOf="parent">

</androidx.appcompat.widget.SwitchCompat>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allow_label"
        android:layout_marginTop="@dimen/dimen50"
        android:id="@+id/lay_action"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/white"
            app:icon="@android:drawable/ic_menu_share"
            app:iconTint="@color/white"
            android:layout_marginEnd="@dimen/dimen16"
            app:backgroundTint="@color/purple_700"
            android:id="@+id/fb_share"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconTint="@color/white"
            app:backgroundTint="@color/purple_700"
            android:id="@+id/fb_edit"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>